# kbupgrade

./: .gitignore  INSTALL  Makefile.am  README  README.git  README.matrix  TODO  configure.ac  make_dists.sh.in
circuits/IBM_M4-1/: 74hc164.lib  README  pcb.pro  pcb.sch  schematic.pro  schematic.sch
circuits/IBM_Model_M/: README  dulcimer.000  dulcimer.brd  dulcimer.cmp  dulcimer.erc  dulcimer.lst  dulcimer.net  dulcimer.pro  dulcimer.sch  dulcimer.stf
circuits/IBM_Model_M_122_keys/: 74hc164.lib  74hc165.lib  README  schematic.pro  schematic.sch  simple.pro  simple.sch
firmware/: Makefile.default
firmware/1390702_leds/: Makefile.am  README  bootloaderinit.h  file_id.more  main.c  pindefs.h
firmware/1390702_noleds/: Makefile.am  README  bootloaderinit.h  file_id.more  main.c
firmware/1391401/: Makefile.am  README  bootloaderinit.h  main.c
firmware/1392934/: Makefile.am  README  bootloaderinit.h  file_id.more  main.c
firmware/M4-1/: Makefile.am  README  bootloaderinit.h  main.c  pindefs.h
firmware/bootloader/: boot.c
firmware/common/: Makefile.am  commandmode.c  commandmode.h  eeprom.h  keymapdecode.c  keymapencode.c  leddefs.h  processcolumns.c  scankeys.c  scanrows.c  shiftreg.c  standard_main.c  standard_timer0_isr.c  usbconfig.h.in  usbfuns.c  usbkeycodes.h  usbrequests.h
firmware/vusb/: Makefile.am
firmware/vusb-20090822/examples/hid-data/firmware/: usbconfig.h
firmware/vusb/examples/custom-class/firmware/: usbconfig.h
firmware/vusb/examples/hid-custom-rq/firmware/: usbconfig.h
firmware/vusb/examples/hid-mouse/firmware/: usbconfig.h
firmware/vusb/libs-device/: osccal.h
firmware/vusb/tests/: usbconfig.h
mappings/: 6cluster_media_keys.map  HJKL_arrows.map  Makefile.am  WASD_arrows.map  ZXCVB_ergoshift_ISO.map  caps_ctrl_swap.map  caps_is_backspace.map  caps_is_ctrl.map  carpalx_full.map  carpalx_full_keep_ZXCV.map  carpalx_full_letters_only.map  carpalx_partial10.map  carpalx_partial5.map  colemak.map  digit_function_keys.map  dvorak.map  esdf_arrows.map  esdf_arrows_and_more.map  ext_function_keys.map  no_winkeys.map  rt3200_9block.map  tab_is_caps.map  tarmak1.map  tarmak2.map  virtual_numpad.map  wasd_arrows_and_more.map
matrices/: 1390702.matrix  1391401.matrix  1392934.matrix  356CL.matrix  M4-1.matrix  Makefile.am  RT-3200.matrix
tools/: Makefile.am  codectest.c  kbcom.c  kbcom.h  kbuptool.c  procmatrix.py
tools/bootloadHID.2008-11-26/commandline/: Makefile.am  main.c  usb-libusb.c  usb-windows.c  usbcalls.h
tools/bootloadHID.2008-11-26/firmware/: bootloaderconfig.h
