EXTRA_DIST=\
 caps_ctrl_swap.map\
 caps_is_backspace.map\
 caps_is_ctrl.map\
 carpalx_full.map\
 carpalx_full_keep_ZXCV.map\
 carpalx_full_letters_only.map\
 carpalx_partial10.map\
 carpalx_partial5.map\
 colemak.map\
 digit_function_keys.map\
 dvorak.map\
 esdf_arrows.map\
 esdf_arrows_and_more.map\
 ext_function_keys.map\
 no_winkeys.map\
 rt3200_9block.map\
 tarmak1.map\
 tarmak2.map\
 virtual_numpad.map\
 wasd_arrows.map\
 wasd_arrows_and_more.map\
 ZXCVB_ergoshift_ISO.map
