EXTRA_DIST=\
 6cluster_media_keys.map\
 caps_ctrl_swap.map\
 caps_is_backspace.map\
 caps_is_ctrl.map\
 carpalx_full.map\
 carpalx_full_keep_ZXCV.map\
 carpalx_full_letters_only.map\
 carpalx_partial10.map\
 carpalx_partial5.map\
 colemak.map\
 digit_function_keys.map\
 dvorak.map\
 ESDF_arrows.map\
 ESDF_arrows_and_more.map\
 ext_function_keys.map\
 HJKL_arrows.map\
 no_winkeys.map\
 rt3200_9block.map\
 tab_is_caps.map\
 tarmak1.map\
 tarmak2.map\
 virtual_numpad.map\
 WASD_arrows.map\
 WASD_arrows_and_more.map\
 ZXCVB_ergoshift_ISO.map
