# Add vusb-20090822 to distribution.
EXTRA_DIST=\
 Changelog.txt\
 CommercialLicense.txt\
 License.txt\
 Makefile.am\
 Readme.txt\
 USB-ID-FAQ.txt\
 USB-IDs-for-free.txt\
 circuits/Readme.txt\
 circuits/tiny45-rc.png\
 circuits/tiny45-rc.sch\
 circuits/with-series-diodes.png\
 circuits/with-series-diodes.sch\
 circuits/with-vreg.png\
 circuits/with-vreg.sch\
 circuits/with-zener.png\
 circuits/with-zener.sch\
 examples/Readme.txt\
 examples/custom-class/Readme.txt\
 examples/custom-class/commandline/Makefile\
 examples/custom-class/commandline/Makefile.windows\
 examples/custom-class/commandline/opendevice.c\
 examples/custom-class/commandline/opendevice.h\
 examples/custom-class/commandline/set-led.c\
 examples/custom-class/firmware/Makefile\
 examples/custom-class/firmware/main.c\
 examples/custom-class/firmware/requests.h\
 examples/custom-class/firmware/usbconfig.h\
 examples/hid-custom-rq/Readme.txt\
 examples/hid-custom-rq/commandline/Makefile\
 examples/hid-custom-rq/commandline/Makefile.windows\
 examples/hid-custom-rq/commandline/opendevice.c\
 examples/hid-custom-rq/commandline/opendevice.h\
 examples/hid-custom-rq/commandline/set-led.c\
 examples/hid-custom-rq/firmware/Makefile\
 examples/hid-custom-rq/firmware/main.c\
 examples/hid-custom-rq/firmware/requests.h\
 examples/hid-custom-rq/firmware/usbconfig.h\
 examples/hid-data/Readme.txt\
 examples/hid-data/commandline/Makefile\
 examples/hid-data/commandline/Makefile.windows\
 examples/hid-data/commandline/hiddata.c\
 examples/hid-data/commandline/hiddata.h\
 examples/hid-data/commandline/hidsdi.h\
 examples/hid-data/commandline/hidtool.c\
 examples/hid-data/firmware/Makefile\
 examples/hid-data/firmware/main.c\
 examples/hid-data/firmware/usbconfig.h\
 examples/hid-mouse/Readme.txt\
 examples/hid-mouse/firmware/Makefile\
 examples/hid-mouse/firmware/main.c\
 examples/hid-mouse/firmware/usbconfig.h\
 examples/usbtool/Makefile\
 examples/usbtool/Makefile.windows\
 examples/usbtool/Readme.txt\
 examples/usbtool/opendevice.c\
 examples/usbtool/opendevice.h\
 examples/usbtool/usbtool.c\
 libs-device/Readme.txt\
 libs-device/osccal.c\
 libs-device/osccal.h\
 libs-device/osctune.h\
 libs-host/Readme.txt\
 libs-host/hiddata.c\
 libs-host/hiddata.h\
 libs-host/hidsdi.h\
 libs-host/opendevice.c\
 libs-host/opendevice.h\
 tests/Makefile\
 tests/Readme.txt\
 tests/compare-sizes.awk\
 tests/main.c\
 tests/null.c\
 tests/sizes-reference/sizes-20080418-gcc3.4.6.txt\
 tests/sizes-reference/sizes-20080418-gcc4.2.2.txt\
 tests/sizes-reference/sizes-20080513-gcc3.4.6.txt\
 tests/sizes-reference/sizes-20080513-gcc4.3.0.txt\
 tests/sizes-reference/sizes-20081022-gcc3.4.6.txt\
 tests/sizes-reference/sizes-20081022-gcc4.3.0.txt\
 tests/sizes-reference/sizes-20081126-gcc3.4.6.txt\
 tests/sizes-reference/sizes-20081126-gcc4.3.0.txt\
 tests/sizes-reference/sizes-20090323-gcc3.4.6.txt\
 tests/sizes-reference/sizes-20090323-gcc4.3.2.txt\
 tests/sizes-reference/sizes-20090415-gcc3.4.6.txt\
 tests/sizes-reference/sizes-20090415-gcc4.3.2.txt\
 tests/usbconfig.h\
 usbdrv/Changelog.txt\
 usbdrv/CommercialLicense.txt\
 usbdrv/License.txt\
 usbdrv/Readme.txt\
 usbdrv/USB-ID-FAQ.txt\
 usbdrv/USB-IDs-for-free.txt\
 usbdrv/USBID-License.txt\
 usbdrv/asmcommon.inc\
 usbdrv/oddebug.c\
 usbdrv/oddebug.h\
 usbdrv/usbconfig-prototype.h\
 usbdrv/usbdrv.c\
 usbdrv/usbdrv.h\
 usbdrv/usbdrvasm.S\
 usbdrv/usbdrvasm.asm\
 usbdrv/usbdrvasm12.inc\
 usbdrv/usbdrvasm128.inc\
 usbdrv/usbdrvasm15.inc\
 usbdrv/usbdrvasm16.inc\
 usbdrv/usbdrvasm165.inc\
 usbdrv/usbdrvasm18-crc.inc\
 usbdrv/usbdrvasm20.inc\
 usbdrv/usbportability.h
